plugins {
    id 'java-library'
    id 'maven-publish'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withJavadocJar()
    withSourcesJar()
}

javadoc {
    options.tags = ["apiNote:a:API Note"]
}

group 'tungsten'
version '0.9-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java { srcDirs = ["src/main/java"] }
    }
    test {
        java { srcDirs = ["src/test/java"] }
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.0'
    testImplementation 'org.testng:testng:7.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('jar') {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version)
    }
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/lionmage/tungsten-types")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}

test {
    useJUnitPlatform()
}